<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_update"
    android:layout_width="380dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.00dp"
        android:text="@string/edit_adr"
        android:textColor="@color/orange"
        android:textAlignment="center"
        android:textSize="@dimen/_20ssp"/>

    <EditText
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15.00dp"
        android:layout_marginStart="17.00dp"
        android:layout_marginEnd="17.00dp"
        android:inputType="textPersonName"
        android:hint="@string/full_name"
        android:enabled="false"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15.00dp"
        android:layout_marginStart="17.00dp"
        android:layout_marginEnd="17.00dp"
        android:enabled="false"
        android:inputType="number"
        android:hint="@string/phone"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/pinCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15.00dp"
        android:layout_marginStart="17.00dp"
        android:layout_marginEnd="17.00dp"
        android:inputType="number"
        android:hint="@string/pin"
        android:enabled="false"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15.00dp"
        android:layout_marginStart="17.00dp"
        android:layout_marginEnd="17.00dp"
        android:inputType="text"
        android:enabled="false"
        android:hint="@string/state"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15.00dp"
        android:layout_marginStart="17.00dp"
        android:layout_marginEnd="17.00dp"
        android:inputType="text"
        android:enabled="false"
        android:hint="@string/city"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:autofillHints="name" />


    <EditText
        android:id="@+id/adr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15.00dp"
        android:layout_marginStart="17.00dp"
        android:layout_marginEnd="17.00dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:autofillHints="name"
        android:enabled="false"
        android:inputType="textMultiLine"
        android:hint="@string/addr"
        android:gravity="top|start"
        android:maxLines="3"
        android:minLines="2"
        android:scrollbars="vertical"
        android:lines="3" />


    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editBtn"
            android:layout_width="0dp"
            android:layout_height="50.50dp"
            android:layout_weight=".5"
            android:layout_marginHorizontal="17.00dp"
            android:layout_marginTop="20.00dp"
            android:layout_marginBottom="20.00dp"
            android:backgroundTint="@color/light_grey"
            android:text="@string/edit"
            android:textSize="@dimen/_20ssp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:cornerRadius="8.40dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveBtn"
            android:layout_width="0dp"
            android:layout_height="50.50dp"
            android:layout_weight=".5"
            android:enabled="false"
            android:layout_marginHorizontal="17.00dp"
            android:layout_marginTop="20.00dp"
            android:layout_marginBottom="20.00dp"
            android:backgroundTint="@color/orange"
            android:text="@string/save"
            android:textSize="@dimen/_20ssp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:cornerRadius="8.40dp"/>

    </LinearLayout>




</LinearLayout>