<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="10.00dp"
        android:layout_marginVertical="4.00dp"
        app:cardCornerRadius="4dp"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image"
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/name"
            android:scaleType="centerCrop"
            android:src="@drawable/icon" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/title"
        android:layout_width="300.00dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        android:text="@string/product_name"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/price"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/qnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/qnt"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/price" />



    <TextView
        android:id="@+id/itemCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginStart="40.00dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/count"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/qnt"
        app:layout_constraintTop_toBottomOf="@+id/price" />




</androidx.constraintlayout.widget.ConstraintLayout>