<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">



    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="110dp"
        android:layout_height="120dp"
        android:layout_marginHorizontal="10.00dp"
        android:layout_marginVertical="5.00dp"
        app:cardCornerRadius="5dp"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image"
            android:padding="6dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/name"
            android:scaleType="centerCrop"
            android:src="@drawable/icon" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/product_name"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/price"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/qnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/qnt"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/price" />





    <ImageButton
        android:id="@+id/delProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_delete_24" />



    <ImageButton
        android:id="@+id/incrementBtn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="70dp"
        android:backgroundTint="@color/light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delProduct"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_24"
        android:contentDescription="@string/name" />


    <TextView
        android:id="@+id/itemCount"
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/count"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/incrementBtn"
        app:layout_constraintTop_toBottomOf="@+id/delProduct" />

    <ImageButton
        android:id="@+id/decrementBtn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="14dp"
        android:backgroundTint="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/itemCount"
        app:layout_constraintTop_toBottomOf="@+id/delProduct"
        app:srcCompat="@drawable/ic_baseline_horizontal_rule_24"
        android:contentDescription="@string/name"/>


</androidx.constraintlayout.widget.ConstraintLayout>